buttons facebook, github, gplus

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
     <article>
       <h4>molecule-social-buttons</h4>
       <link rel="stylesheet" href="./assets/atoms/buttons/facebook/index.css">
+      <link rel="stylesheet" href="./assets/atoms/buttons/github/index.css">
+      <link rel="stylesheet" href="./assets/atoms/buttons/gplus/index.css">
       <button class="atom-button-facebook">Facebook</button>
-      <button class="atom-button-twitter">Twitter</button>
-      <button class="atom-button-gplus">Plus</button>
+      <button class="atom-button-github">github</button>
+      <button class="atom-button-gplus">Google+</button>
     </article>
   </section>
   <section>
@@ -53,8 +55,8 @@
       <h4>molecule-social-buttons COLAPSED</h4>
       <div class='molecule-social-login-buttons-wrapper'>
         <button class="atom-button-facebook">Facebook</button>
-        <button class="atom-button-twitter">Twitter</button>
-        <button class="atom-button-gplus">Plus</button>
+        <button class="atom-button-github">github</button>
+        <button class="atom-button-gplus">Google+</button>
       </div>
     </article>
   </section>
@@ -67,8 +69,8 @@
       <div class='organism-login'>
         <div class='molecule-social-login-buttons-wrapper'>
           <button class="atom-button-facebook">Facebook</button>
-          <button class="atom-button-twitter">Twitter</button>
-          <button class="atom-button-gplus">Plus</button>
+          <button class="atom-button-github">github</button>
+          <button class="atom-button-gplus">Google+</button>
         </div>
         <input type="email" class="atom-input atom-input-email" placeholder="teste@teste.com">
         <input type="password" class="atom-input atom-input-password" placeholder="Password">
@@ -83,8 +85,8 @@
       <div class='organism-cadastro'>
         <div class='molecule-social-login-buttons-wrapper'>
           <button class="atom-button-facebook">Facebook</button>
-          <button class="atom-button-twitter">Twitter</button>
-          <button class="atom-button-gplus">Plus</button>
+          <button class="atom-button-github">github</button>
+          <button class="atom-button-gplus">Google+</button>
         </div>
         <form action="">
           <input type="email" class="atom-input atom-input-email" placeholder="teste@teste.com">
